--- a/Basic-Portfolio/assets/css/style.css
+++ b/Basic-Portfolio/assets/css/style.css
@@ -43,7 +43,7 @@ h1 {
   padding-bottom: 20px;
   font-size: 30px;
   line-height: 49px;
-  border-bottom: 3px solid #ddd;
+  border-bottom: 3px solid #ff6481;
 }
 
 h2,
@@ -62,7 +62,7 @@ h3 {
   width: 100%;
   color: #fff;
   background: #fff;
-  border-bottom: 2px solid #ccc;
+  border-bottom: 2px solid #0f3e8d;
 }
 
 #logo {
@@ -109,11 +109,11 @@ footer {
   padding: 30px 0;
   clear: both;
   color: #fff;
-  color: #ccc;
+  color: #ff6481;
   font-size: 12px;
   text-align: center;
   background: #666;
-  border-top: 8px solid #4aaaa5;
+  border-top: 8px solid #ff6481;
 }
 
 
@@ -196,7 +196,7 @@ h3,
   text-align: center;
   line-height: 30px;
   font-weight: 300;
-  background: #4aaaa5;
+  background: #ff6481;
   border-bottom: 0;
 }
 
@@ -245,6 +245,6 @@ input[type=submit] {
   color: #fff;
   font-size: 18px;
   cursor: pointer;
-  background: #4aaaa5;
+  background: #ff6481;
   border: 0 none;
 }
